--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
 		
 		<script src="js/calculaimc.js"></script>
 		<script src="js/form.js"></script>
+		<script src="js/remover-paciente.js"></script>
 	</body>
 </html>
