--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<button id="buscar-paciente" class="botao bto-principal">Buscar Paciente</button>
 			</section>
 		</main>
 
@@ -107,5 +107,6 @@
 		<script src="js/form.js"></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/filter.js"></script>
+		<script src="js/buscar-pacientes.js"></script>
 	</body>
 </html>
