adicionada mensagem de erro caso a requisição http de  erro

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 						</tr>
 					</tbody>
 				</table>
-				<button id="buscar-paciente" class="botao bto-principal">Buscar Paciente</button>
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+				<button id="buscar-paciente" class="botao bto-principal">Buscar Paciente</button>	
 			</section>
 		</main>
 
